Mejoras de fotos y bugs

--- a/resources/messages/Messages_en.properties
+++ b/resources/messages/Messages_en.properties
@@ -60,6 +60,7 @@ label.component=Component:
 label.componentorevent=Component\nEvent
 label.section=Section:
 label.coursemodule=Course module:
+text.sectionplaceholder="Front page"
 btn.group=Group
 btn.rol=Rol
 btn.type=Type
