--- a/resources/messages/Messages_es.properties
+++ b/resources/messages/Messages_es.properties
@@ -56,12 +56,13 @@ label.filter=Filtro...
 label.component=Componente: 
 label.componentorevent=Componente\nEvento
 label.section=Secciones:
-label.coursemodule=Módulos del curso:
+label.coursemodule=Módulos:
 label.participants=Participantes: 
 label.categoryitem=Categoría/Item:
 btn.group=Grupo
 btn.rol=Rol
 btn.type=Tipo
+text.sectionplaceholder="Página principal"
 
 text.nousers=No hay coincidencias
 text.all=Todos
