Modificado con varios cambios

--- a/resources/messages/Messages_es.properties
+++ b/resources/messages/Messages_es.properties
@@ -9,6 +9,7 @@ label.never=No disponible
 checkbox.updatedata=Actualizar datos
 btn.enter=Entrar
 btn.clear=Borrar
+tooltip.insecureprotocol=Esta conexión no es segura.\nLas credenciales pueden verse comprometidas.
 
 error.fields=Debes completar todos los campos.
 error.host=No se ha podido conectar con el host.
