4 tramos de ultima conexion

--- a/resources/messages/Messages_ca.properties
+++ b/resources/messages/Messages_ca.properties
@@ -54,7 +54,7 @@ label.categoryitem     = Categoria / article:
 label.close            = Tanca
 label.component        = Component:
 label.componentorevent = Esdeveniment de component:
-label.course           = Curs:
+label.course           = Curs: 
 label.coursemodule     = M\u00F2duls del curs:
 label.enddate          = Data de refer\u00E8ncia final:
 label.event            = Esdeveniment:
@@ -580,6 +580,7 @@ text.days               = Dies
 text.hours              = Hores
 text.lastaccess         = \u00DAltim acc\u00E9s:
 text.minutes            = Minuts
+text.moodle             = Moodle: 
 text.never              = Mai
 text.nousers            = Sense coincid\u00E8ncies
 text.seconds            = Segons
