--- a/resources/messages/Messages_de.properties
+++ b/resources/messages/Messages_de.properties
@@ -54,7 +54,7 @@ label.categoryitem     = Kategorie / Gegenstand:
 label.close            = Schlie\u00DFen
 label.component        = Komponente:
 label.componentorevent = Komponentenereignis:
-label.course           = Kurs:
+label.course           = Kurs: 
 label.coursemodule     = Kursmodule:
 label.enddate          = Enddatum:
 label.event            = Veranstaltung:
@@ -580,6 +580,7 @@ text.days               = Tage
 text.hours              = Std
 text.lastaccess         = Letzter Zugriff:
 text.minutes            = Protokoll
+text.moodle             = Moodle: 
 text.never              = noch nie
 text.nousers            = Kein Zufall
 text.seconds            = Sekunden
