--- a/resources/messages/Messages_es.properties
+++ b/resources/messages/Messages_es.properties
@@ -54,7 +54,7 @@ label.categoryitem     = Categor\u00EDa/Item:
 label.close            = Cerrar
 label.component        = Componente: 
 label.componentorevent = Componente\nEvento:
-label.course           = Curso:
+label.course           = Curso: 
 label.coursemodule     = M\u00F3dulos:
 label.enddate          = Fecha de referencia final: 
 label.event            = Evento:
@@ -580,6 +580,7 @@ text.days               = d\u00EDas
 text.hours              = horas
 text.lastaccess         = \u00DAltimo acceso: 
 text.minutes            = minutos
+text.moodle             = Moodle: 
 text.never              = Nunca
 text.nousers            = No hay coincidencias
 text.seconds            = segundos
