--- a/resources/messages/Messages_fr.properties
+++ b/resources/messages/Messages_fr.properties
@@ -54,7 +54,7 @@ label.categoryitem     = Cat\u00E9gorie / article:
 label.close            = Fermer
 label.component        = Composant:
 label.componentorevent = \u00C9v\u00E9nement de composant:
-label.course           = Cours:
+label.course           = Cours: 
 label.coursemodule     = Modules de cours:
 label.enddate          = Date de r\u00E9f\u00E9rence finale:
 label.event            = Un \u00E9v\u00E9nement:
@@ -580,6 +580,7 @@ text.days               = Journ\u00E9es
 text.hours              = Heures
 text.lastaccess         = Dernier acc\u00E8s:
 text.minutes            = Minutes
+text.moodle             = Moodle: 
 text.never              = Jamais
 text.nousers            = Pas de co\u00EFncidences
 text.seconds            = Secondes
