--- a/resources/messages/Messages_it.properties
+++ b/resources/messages/Messages_it.properties
@@ -54,7 +54,7 @@ label.categoryitem     = Categoria / Articolo:
 label.close            = Vicino
 label.component        = Componente:
 label.componentorevent = Evento componente:
-label.course           = Corso:
+label.course           = Corso: 
 label.coursemodule     = Moduli del corso:
 label.enddate          = Data di riferimento di fine:
 label.event            = Evento:
@@ -580,6 +580,7 @@ text.days               = giorni
 text.hours              = Ore
 text.lastaccess         = Ultimo accesso:
 text.minutes            = Minuti
+text.moodle             = Moodle: 
 text.never              = Mai
 text.nousers            = Nessuna coincidenza
 text.seconds            = secondi
