--- a/resources/messages/Messages_pt.properties
+++ b/resources/messages/Messages_pt.properties
@@ -54,7 +54,7 @@ label.categoryitem     = Categoria / Item:
 label.close            = Perto
 label.component        = Componente:
 label.componentorevent = Evento Componente:
-label.course           = Curso:
+label.course           = Curso: 
 label.coursemodule     = M\u00F3dulos do curso:
 label.enddate          = Data de refer\u00EAncia final:
 label.event            = Evento:
@@ -580,6 +580,7 @@ text.days               = Dias
 text.hours              = Horas
 text.lastaccess         = \u00DAltimo acesso:
 text.minutes            = Minutos
+text.moodle             = Moodle: 
 text.never              = Nunca
 text.nousers            = Sem coincid\u00EAncias
 text.seconds            = Segundos
