--- a/resources/messages/Messages_en.properties
+++ b/resources/messages/Messages_en.properties
@@ -54,7 +54,7 @@ label.categoryitem     = Category/Item:
 label.close            = Close
 label.component        = Component: 
 label.componentorevent = Component\nEvent:
-label.course           = Course:
+label.course           = Course: 
 label.coursemodule     = Course module:
 label.enddate          = End reference date: 
 label.event            = Event: 
@@ -580,6 +580,7 @@ text.days               = Days
 text.hours              = Hours
 text.lastaccess         = Last access: 
 text.minutes            = Minutes
+text.moodle             = Moodle: 
 text.never              = Never
 text.nousers            = No coincidences
 text.seconds            = Seconds
