--- a/resources/messages/Messages_ca.properties
+++ b/resources/messages/Messages_ca.properties
@@ -50,6 +50,7 @@ error.userdata        = Error en recuperar les dades de l'usuari.
 header.passwordChangedMessage = S'ha detectat la contrasenya
 header.passwordDateTime       = Contrasenya de data anterior:
 
+label.activity         = \u00DAltima connexi\u00F3:
 label.categoryitem     = Categoria / article:
 label.close            = Tanca
 label.component        = Component:
@@ -564,6 +565,7 @@ module.quiz     = Q\u00FCestionari
 module.resource = Dossier
 module.scorm    = Paquet SCORM
 module.survey   = Enquesta
+module.tab      = Visualitzaci\u00F3 de pestanya
 module.url      = URL
 module.wiki     = Wiki
 module.workshop = Taller
@@ -576,6 +578,7 @@ tab.logs         = Registres
 tab.section      = Secci\u00F3
 
 text.all                = Tots
+text.betweendates       = Between {0} and {1} 
 text.days               = Dies
 text.hours              = Hores
 text.lastaccess         = \u00DAltim acc\u00E9s:
