--- a/resources/messages/Messages_de.properties
+++ b/resources/messages/Messages_de.properties
@@ -50,6 +50,7 @@ error.userdata        = Fehler beim Wiederherstellen der Benutzerdaten.
 header.passwordChangedMessage = Gefunden wurde ein ge\u00E4ndertes Passwort
 header.passwordDateTime       = Passwort f\u00FCr das vorherige Datum:
 
+label.activity         = Letzte Verbindung:
 label.categoryitem     = Kategorie / Gegenstand:
 label.close            = Schlie\u00DFen
 label.component        = Komponente:
@@ -564,6 +565,7 @@ module.quiz     = Quiz
 module.resource = Datei
 module.scorm    = SCORM-Paket
 module.survey   = Umfrage
+module.tab      = Tab-Anzeige
 module.url      = URL
 module.wiki     = Wiki
 module.workshop = Werkstatt
@@ -576,6 +578,7 @@ tab.logs         = Protokolle
 tab.section      = Abschnitt
 
 text.all                = Alles
+text.betweendates       = Between {0} and {1}
 text.days               = Tage
 text.hours              = Std
 text.lastaccess         = Letzter Zugriff:
