--- a/resources/messages/Messages_en.properties
+++ b/resources/messages/Messages_en.properties
@@ -50,6 +50,7 @@ error.userdata        = Error when recovering user data.
 header.passwordChangedMessage = Detected was password changed
 header.passwordDateTime       = Previous date password: 
 
+label.activity         = Last connection:
 label.categoryitem     = Category/Item:
 label.close            = Close
 label.component        = Component: 
@@ -564,6 +565,7 @@ module.quiz     = Quiz
 module.resource = File
 module.scorm    = SCORM package
 module.survey   = Survey
+module.tab      = Tab display
 module.url      = URL
 module.wiki     = Wiki
 module.workshop = Workshop
@@ -576,6 +578,7 @@ tab.logs         = Logs
 tab.section      = Sections
 
 text.all                = All
+text.betweendates       = Between {0} and {1}
 text.days               = Days
 text.hours              = Hours
 text.lastaccess         = Last access: 
