--- a/resources/messages/Messages_es.properties
+++ b/resources/messages/Messages_es.properties
@@ -50,6 +50,7 @@ error.userdata        = Error al recuperar los datos del usuario.
 header.passwordChangedMessage = Se ha detectado que se ha cambiado la contrase\u00F1a
 header.passwordDateTime       = Fecha de la contrase\u00F1a antigua: 
 
+label.activity         = \u00DAltima conexi\u00F3n:
 label.categoryitem     = Categor\u00EDa/Item:
 label.close            = Cerrar
 label.component        = Componente: 
@@ -564,6 +565,7 @@ module.quiz     = Cuestionario
 module.resource = Archivo
 module.scorm    = Paquete SCORM
 module.survey   = Encuestas predefinidas
+module.tab      = Pesta\u00F1a de visualizaci\u00F3n
 module.url      = URL
 module.wiki     = Wiki
 module.workshop = Taller
@@ -576,6 +578,7 @@ tab.logs         = Registros
 tab.section      = Secci\u00F3n
 
 text.all                = Todos
+text.betweendates       = Entre {0} y {1} d\u00EDas
 text.days               = d\u00EDas
 text.hours              = horas
 text.lastaccess         = \u00DAltimo acceso: 
