--- a/resources/messages/Messages_it.properties
+++ b/resources/messages/Messages_it.properties
@@ -50,6 +50,7 @@ error.userdata        = Errore durante il recupero dei dati dell'utente.
 header.passwordChangedMessage = Rilevato \u00E8 stata modificata la password
 header.passwordDateTime       = Data precedente password:
 
+label.activity         = Ultima connessione:
 label.categoryitem     = Categoria / Articolo:
 label.close            = Vicino
 label.component        = Componente:
@@ -564,6 +565,7 @@ module.quiz     = Quiz
 module.resource = File
 module.scorm    = Pacchetto SCORM
 module.survey   = Sondaggio
+module.tab      = Tab display
 module.url      = URL
 module.wiki     = wiki
 module.workshop = laboratorio
@@ -576,6 +578,7 @@ tab.logs         = logs
 tab.section      = Sezione
 
 text.all                = Tutti
+text.betweendates       = Between {0} and {1}
 text.days               = giorni
 text.hours              = Ore
 text.lastaccess         = Ultimo accesso:
