--- a/resources/messages/Messages_pt.properties
+++ b/resources/messages/Messages_pt.properties
@@ -50,6 +50,7 @@ error.userdata        = Erro ao recuperar dados do usu\u00E1rio.
 header.passwordChangedMessage = Detectado foi senha alterada
 header.passwordDateTime       = Senha da data anterior:
 
+label.activity         = \u00DAltima conex\u00E3o:
 label.categoryitem     = Categoria / Item:
 label.close            = Perto
 label.component        = Componente:
@@ -564,6 +565,7 @@ module.quiz     = Question\u00E1rio
 module.resource = Arquivo
 module.scorm    = Pacote SCORM
 module.survey   = Pesquisa
+module.tab      = Exibi\u00E7\u00E3o de guia
 module.url      = URL
 module.wiki     = Wiki
 module.workshop = Oficina
@@ -576,6 +578,7 @@ tab.logs         = Logs
 tab.section      = Se\u00E7\u00E3o
 
 text.all                = Todos
+text.betweendates       = Between {0} and {1}
 text.days               = Dias
 text.hours              = Horas
 text.lastaccess         = \u00DAltimo acesso:
