--- a/resources/messages/Messages_fr.properties
+++ b/resources/messages/Messages_fr.properties
@@ -50,6 +50,7 @@ error.userdata        = Erreur lors de la r\u00E9cup\u00E9ration des donn\u00E9e
 header.passwordChangedMessage = D\u00E9tect\u00E9 a \u00E9t\u00E9 chang\u00E9 le mot de passe
 header.passwordDateTime       = Date pr\u00E9c\u00E9dente mot de passe:
 
+label.activity         = Derni\u00E8re connexion:
 label.categoryitem     = Cat\u00E9gorie / article:
 label.close            = Fermer
 label.component        = Composant:
@@ -564,6 +565,7 @@ module.quiz     = Quiz
 module.resource = Fichier
 module.scorm    = Forfait SCORM
 module.survey   = Sondage
+module.tab      = Affichage par onglet
 module.url      = URL
 module.wiki     = Wiki
 module.workshop = Atelier
@@ -576,6 +578,7 @@ tab.logs         = Les journaux
 tab.section      = Section
 
 text.all                = Tout
+text.betweendates       = Between {0} and {1}
 text.days               = Journ\u00E9es
 text.hours              = Heures
 text.lastaccess         = Dernier acc\u00E8s:
