Completed different list view courses

--- a/resources/messages/Messages_ca.properties
+++ b/resources/messages/Messages_ca.properties
@@ -580,12 +580,14 @@ tab.section      = Secci\u00F3
 text.all                = Tots
 text.betweendates       = Between {0} and {1} 
 text.days               = Dies
+text.favorite           = Destacats
 text.hours              = Hores
 text.lastaccess         = \u00DAltim acc\u00E9s:
 text.minutes            = Minuts
 text.moodle             = Moodle: 
 text.never              = Mai
 text.nousers            = Sense coincid\u00E8ncies
+text.recent             = Recents
 text.seconds            = Segons
 text.sectionplaceholder = Portada
 
