--- a/resources/messages/Messages_de.properties
+++ b/resources/messages/Messages_de.properties
@@ -580,12 +580,14 @@ tab.section      = Abschnitt
 text.all                = Alles
 text.betweendates       = Between {0} and {1}
 text.days               = Tage
+text.favorite           = Als Favorit markiert
 text.hours              = Std
 text.lastaccess         = Letzter Zugriff:
 text.minutes            = Protokoll
 text.moodle             = Moodle: 
 text.never              = noch nie
 text.nousers            = Kein Zufall
+text.recent             = K\u00FCrzlich\r\n
 text.seconds            = Sekunden
 text.sectionplaceholder = Titelseite
 
