--- a/resources/messages/Messages_en.properties
+++ b/resources/messages/Messages_en.properties
@@ -580,12 +580,14 @@ tab.section      = Sections
 text.all                = All
 text.betweendates       = Between {0} and {1}
 text.days               = Days
+text.favorite           = Starred
 text.hours              = Hours
 text.lastaccess         = Last access: 
 text.minutes            = Minutes
 text.moodle             = Moodle: 
 text.never              = Never
 text.nousers            = No coincidences
+text.recent             = Recent
 text.seconds            = Seconds
 text.sectionplaceholder = Front page
 
