--- a/resources/messages/Messages_es.properties
+++ b/resources/messages/Messages_es.properties
@@ -580,12 +580,14 @@ tab.section      = Secci\u00F3n
 text.all                = Todos
 text.betweendates       = Entre {0} y {1} d\u00EDas
 text.days               = d\u00EDas
+text.favorite           = Destacados
 text.hours              = horas
 text.lastaccess         = \u00DAltimo acceso: 
 text.minutes            = minutos
 text.moodle             = Moodle: 
 text.never              = Nunca
 text.nousers            = No hay coincidencias
+text.recent             = Recientes
 text.seconds            = segundos
 text.sectionplaceholder = P\u00E1gina principal
 
