--- a/resources/messages/Messages_fr.properties
+++ b/resources/messages/Messages_fr.properties
@@ -580,12 +580,14 @@ tab.section      = Section
 text.all                = Tout
 text.betweendates       = Between {0} and {1}
 text.days               = Journ\u00E9es
+text.favorite           = Favoris\r\n
 text.hours              = Heures
 text.lastaccess         = Dernier acc\u00E8s:
 text.minutes            = Minutes
 text.moodle             = Moodle: 
 text.never              = Jamais
 text.nousers            = Pas de co\u00EFncidences
+text.recent             = R\u00E9cente
 text.seconds            = Secondes
 text.sectionplaceholder = Page de garde
 
