--- a/resources/messages/Messages_it.properties
+++ b/resources/messages/Messages_it.properties
@@ -580,12 +580,14 @@ tab.section      = Sezione
 text.all                = Tutti
 text.betweendates       = Between {0} and {1}
 text.days               = giorni
+text.favorite           = Preferiti
 text.hours              = Ore
 text.lastaccess         = Ultimo accesso:
 text.minutes            = Minuti
 text.moodle             = Moodle: 
 text.never              = Mai
 text.nousers            = Nessuna coincidenza
+text.recent             = Recente
 text.seconds            = secondi
 text.sectionplaceholder = Prima pagina
 
