--- a/resources/messages/Messages_pt.properties
+++ b/resources/messages/Messages_pt.properties
@@ -580,12 +580,14 @@ tab.section      = Se\u00E7\u00E3o
 text.all                = Todos
 text.betweendates       = Between {0} and {1}
 text.days               = Dias
+text.favorite           = Com estrela
 text.hours              = Horas
 text.lastaccess         = \u00DAltimo acesso:
 text.minutes            = Minutos
 text.moodle             = Moodle: 
 text.never              = Nunca
 text.nousers            = Sem coincid\u00EAncias
+text.recent             = Recentes
 text.seconds            = Segundos
 text.sectionplaceholder = Primeira p\u00E1gina
 
